fixed pixel editor overflow issue when downloads were showing in chrome

--- a/src/containers/MainContainer/MainContainer.scss
+++ b/src/containers/MainContainer/MainContainer.scss
@@ -4,4 +4,5 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  overflow: hidden;
 }
