--- a/src/containers/PixelEditor/PixelEditor.scss
+++ b/src/containers/PixelEditor/PixelEditor.scss
@@ -6,4 +6,5 @@
   position: relative;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
